implemented TODOs in production() function

--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -342,14 +342,14 @@
     "    print(\"correct_form is:\")\n",
     "    print(correct_form)\n",
     "    error_forms = list(language)\n",
-    "    error_forms.remove(correct_form)\n",
-    "    print(\"error_forms is:\")\n",
+    "    error_forms.remove(correct_form) # TODO: Make sure this removes *all* instances of correct form in the language\n",
+    "    print(\"error_forms is:\") # TODO: Write exception for if error_forms is empty because language is degenerate\n",
     "    print(error_forms)\n",
     "    print(\"Check that removing the correct form didn't mess up the language:\")\n",
     "    print(\"language is:\")\n",
     "    print(language)\n",
     "    \n",
-    "\n",
+    "    \n",
     "\n",
     "production(compositional_lang, \"02\")"
    ]
@@ -366,21 +366,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "p37workshop",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "p37workshop"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
