--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -17,7 +17,7 @@
     "3. There is a pressure to make repair sequences as efficient as possible (in terms of utterance length)\n",
     "    4. Listeners have at least two types of repair initiator at their disposal: (i) open request, and (ii) closed request\n",
     "    \n",
-    "This hypothesis is based on the idea that \n",
+    "This hypothesis is based on the idea that if repair sequences are under a pressure to be efficient, then it becomes useful to be able to initiate repair by asking for clarification of just _part_ of the utterance, specifically by feeding back the part of the _meaning_ that you did get. Under those circumstances, a compositional system is helpful (compared to a holistic system), because parts of the signal (i.e. 'substrings') map to parts of the meaning. **Note** that this hypothesis is therefore based on the assumption that the 'closed request' type of repair initiator works only if the listener has _understood_ part of the _meaning_ of the signal, as opposed to just having received part of the _signal_ and being able to repeat that part verbatim, in order to prompt the speaker to repeat the part that didn't come through.\n",
     "\n",
     "\n",
     "\n",
@@ -122,10 +122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "meanings = ['02', '03', '12', '13'] # all possible meanings\n",
@@ -142,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -323,6 +321,25 @@
     }
    ],
    "source": [
+    "# first we need to write a quick function that removes every instance of a given element from a list:\n",
+    "def remove_all_instances(my_list, element_to_be_removed):\n",
+    "    i = 0 # loop counter\n",
+    "    length = len(my_list)  #list length\n",
+    "    while(i<len(my_list)):\n",
+    "        if(my_list[i]==element_to_be_removed):\n",
+    "            my_list.remove(my_list[i])\n",
+    "            # as an element is removed\n",
+    "            # so decrease the length by 1\n",
+    "            length = length -1  \n",
+    "            # run loop again to check element\n",
+    "            # at same index, when item removed \n",
+    "            # next item will shift to the left \n",
+    "            continue\n",
+    "        i = i+1\n",
+    "    return my_list\n",
+    "\n",
+    "\n",
+    "# and now for the actual production function:\n",
     "def production(language, topic):\n",
     "    print('')\n",
     "    print('This is the production() function at work:')\n",
@@ -342,14 +359,16 @@
     "    print(\"correct_form is:\")\n",
     "    print(correct_form)\n",
     "    error_forms = list(language)\n",
-    "    error_forms.remove(correct_form) # TODO: Make sure this removes *all* instances of correct form in the language\n",
-    "    print(\"error_forms is:\") # TODO: Write exception for if error_forms is empty because language is degenerate\n",
+    "    error_forms = remove_all_instances(error_forms, correct_form)\n",
+    "    if len(error_forms) == 0: # if the list of error_forms is empty because the language is degenerate\n",
+    "        error_forms = language # simply choose an error_form from the whole language\n",
+    "    print(\"error_forms is:\")\n",
     "    print(error_forms)\n",
     "    print(\"Check that removing the correct form didn't mess up the language:\")\n",
     "    print(\"language is:\")\n",
     "    print(language)\n",
     "    \n",
-    "    \n",
+    "\n",
     "\n",
     "production(compositional_lang, \"02\")"
    ]
@@ -357,9 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -370,17 +387,47 @@
    "language": "python",
    "name": "python3"
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
    },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
