--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "2019-07-31 15:27:01 \n",
     "# The evolution of compositionality under environmental noise\n",
     "\n",
     "\n",
@@ -38,6 +39,7 @@
     "collapsed": true
    },
    "source": [
+    "2019-07-31 15:27:33 \n",
     "## Production in the Kirby et al. (2015) model:\n",
     "\n",
     "$$\n",
@@ -57,6 +59,7 @@
     "collapsed": true
    },
    "source": [
+    "2019-07-31 15:27:52 \n",
     "## How do we add *environmental* noise to this production model?\n",
     "\n",
     "\n",
@@ -75,7 +78,7 @@
     "B:3 --> b   \n",
     "\n",
     "Given this grammar, the only form that maps to topic 02 is *aa*.   \n",
-    "**Design decision:** If we allow for both 'partial' and 'full' noise,   \n",
+    "__**Design decision:**__ If we allow for both 'partial' and 'full' noise,   \n",
     " this form has three possible noisy variants:\n",
     "- a_\n",
     "- _a\n",
@@ -88,7 +91,7 @@
     "- [a_, _a, \\__ \\] with probability $\\frac{n}{3}$ (because there are 3 possible noisy variants\n",
     "\n",
     "\n",
-    "**Design decision:** should noisy variant \\__ be less likely than other noisy variants, because it means that really *none* of the signal came through? Intuitively it would make sense if a_ was twice as likely to happen as \\__, but that would make it a bit trickier to work out the probabilities for the different noisy variants. So to keep it simple I propose making all the noisy variants equally probable.\n",
+    "__**Design decision:**__ should noisy variant \\__ be less likely than other noisy variants, because it means that really *none* of the signal came through? Intuitively it would make sense if a_ was twice as likely to happen as \\__, but that would make it a bit trickier to work out the probabilities for the different noisy variants. So to keep it simple I propose making all the noisy variants equally probable.\n",
     "\n",
     "\n",
     "\n",
@@ -110,6 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "2019-07-31 15:28:14 \n",
     "### First, let's reproduce Kirby et al.'s (2015) model of production:"
    ]
   },
@@ -123,12 +127,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-31T13:32:28.735676Z",
+     "start_time": "2019-07-31T13:32:28.733299Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "meanings = ['02', '03', '12', '13'] # all possible meanings\n",
-    "forms = ['aa', 'ab', 'ba', 'bb'] # all possible forms\n",
-    "error = 0.05 # the probability of making a production error"
+    "meanings = ['02', '03', '12', '13']  # all possible meanings\n",
+    "forms = ['aa', 'ab', 'ba', 'bb']  # all possible forms\n",
+    "error = 0.05  # the probability of making a production error"
    ]
   },
   {
@@ -141,7 +150,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-31T13:32:28.776515Z",
+     "start_time": "2019-07-31T13:32:28.762336Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -177,6 +191,7 @@
    "source": [
     "import itertools\n",
     "\n",
+    "\n",
     "def create_all_possible_languages(meanings, forms):\n",
     "    \"\"\"Creates all possible languages\n",
     "\n",
@@ -187,7 +202,8 @@
     "    :returns: list of tuples which represent languages, where each tuple consists of forms and has length len(meanings)\n",
     "    :rtype: list\n",
     "    \"\"\"\n",
-    "    all_possible_languages = list(itertools.combinations_with_replacement(forms, len(meanings)))\n",
+    "    all_possible_languages = list(\n",
+    "        itertools.combinations_with_replacement(forms, len(meanings)))\n",
     "    return all_possible_languages\n",
     "\n",
     "\n",
@@ -202,40 +218,43 @@
     "    :returns: the category that the language falls into\n",
     "    :rtype: str\n",
     "    \"\"\"\n",
-    "    #TODO: See if I can modify this function so that it can deal with any number of forms and meanings.\n",
+    "    # TODO: See if I can modify this function so that it can deal with any number of forms and meanings.\n",
     "    # First check whether some conditions are met, bc this function hasn't been coded up in the most general way yet:\n",
     "    if len(forms) != 4:\n",
-    "        raise ValueError(\"This function only works for a world in which there are 4 possible forms\")\n",
+    "        raise ValueError(\n",
+    "            \"This function only works for a world in which there are 4 possible forms\"\n",
+    "        )\n",
     "    if len(forms[0]) != 2:\n",
-    "        raise ValueError(\"This function only works when each form consists of 2 elements\")\n",
+    "        raise ValueError(\n",
+    "            \"This function only works when each form consists of 2 elements\")\n",
     "    if len(lang) != len(meanings):\n",
     "        raise ValueError(\"Lang should have same length as meanings\")\n",
-    "        \n",
+    "\n",
     "    # lang is degenerate if it uses the same form for every meaning:\n",
     "    if lang[0] == lang[1] and lang[1] == lang[2] and lang[2] == lang[3]:\n",
     "        return 'degenerate'\n",
-    "        \n",
+    "\n",
     "    # lang is compositional if it's *not* degenerate, and each form element maps to the same meaning element for each form:\n",
-    "    elif lang[0][0] == lang[1][0] and lang[2][0] == lang[3][0] and lang[0][1] == lang[2][1] and lang[1][1] == lang[3][1]:\n",
+    "    elif lang[0][0] == lang[1][0] and lang[2][0] == lang[3][0] and lang[0][\n",
+    "            1] == lang[2][1] and lang[1][1] == lang[3][1]:\n",
     "        return 'compositional'\n",
-    "    \n",
+    "\n",
     "    # lang is holistic if it is *not* compositional, but *does* make us of all possible forms:\n",
-    "    elif forms[0] in lang and forms[1] in lang and forms[2] in lang and forms[3] in lang:\n",
+    "    elif forms[0] in lang and forms[1] in lang and forms[2] in lang and forms[\n",
+    "            3] in lang:\n",
     "        return 'holistic'\n",
-    "    \n",
+    "\n",
     "    # In all other cases, a language belongs to the 'other' category:\n",
     "    else:\n",
     "        return 'other'\n",
-    "        \n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "# Let's try out our create_all_possible_languages() function:\n",
     "all_possible_languages = create_all_possible_languages(meanings, forms)\n",
     "print(\"all_possible_languages are:\")\n",
     "print(all_possible_languages)\n",
     "print(\"number of possible languages is:\")\n",
     "print(len(all_possible_languages))\n",
-    "\n",
     "\n",
     "# Let's test our classify_language() function using some example languages from the Kirby et al. (2015) paper:\n",
     "degenerate_lang = ('aa', 'aa', 'aa', 'aa')\n",
@@ -250,7 +269,8 @@
     "print('')\n",
     "print(\"compositional_lang is:\")\n",
     "print(compositional_lang)\n",
-    "class_compositional_lang = classify_language(compositional_lang, forms, meanings)\n",
+    "class_compositional_lang = classify_language(compositional_lang, forms,\n",
+    "                                             meanings)\n",
     "print(\"class_compositional_lang is:\")\n",
     "print(class_compositional_lang)\n",
     "\n",
@@ -293,7 +313,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-31T13:32:28.798441Z",
+     "start_time": "2019-07-31T13:32:28.790748Z"
+    },
+    "code_folding": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -323,19 +349,19 @@
    "source": [
     "# first we need to write a quick function that removes every instance of a given element from a list:\n",
     "def remove_all_instances(my_list, element_to_be_removed):\n",
-    "    i = 0 # loop counter\n",
-    "    length = len(my_list)  #list length\n",
-    "    while(i<len(my_list)):\n",
-    "        if(my_list[i]==element_to_be_removed):\n",
+    "    i = 0  # loop counter\n",
+    "    length = len(my_list)  # list length\n",
+    "    while (i < len(my_list)):\n",
+    "        if (my_list[i] == element_to_be_removed):\n",
     "            my_list.remove(my_list[i])\n",
     "            # as an element is removed\n",
     "            # so decrease the length by 1\n",
-    "            length = length -1  \n",
+    "            length = length - 1\n",
     "            # run loop again to check element\n",
-    "            # at same index, when item removed \n",
-    "            # next item will shift to the left \n",
+    "            # at same index, when item removed\n",
+    "            # next item will shift to the left\n",
     "            continue\n",
-    "        i = i+1\n",
+    "        i = i + 1\n",
     "    return my_list\n",
     "\n",
     "\n",
@@ -360,25 +386,19 @@
     "    print(correct_form)\n",
     "    error_forms = list(language)\n",
     "    error_forms = remove_all_instances(error_forms, correct_form)\n",
-    "    if len(error_forms) == 0: # if the list of error_forms is empty because the language is degenerate\n",
-    "        error_forms = language # simply choose an error_form from the whole language\n",
+    "    if len(\n",
+    "            error_forms\n",
+    "    ) == 0:  # if the list of error_forms is empty because the language is degenerate\n",
+    "        error_forms = language  # simply choose an error_form from the whole language\n",
     "    print(\"error_forms is:\")\n",
     "    print(error_forms)\n",
     "    print(\"Check that removing the correct form didn't mess up the language:\")\n",
     "    print(\"language is:\")\n",
     "    print(language)\n",
-    "    \n",
     "\n",
     "\n",
     "production(compositional_lang, \"02\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -398,6 +418,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   },
   "toc": {
    "base_numbering": 1,
