added decision about open + closed requests

--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -5,31 +5,45 @@
    "metadata": {},
    "source": [
     "2019-07-31 15:27:01 \n",
+    "\n",
     "# The evolution of compositionality under environmental noise\n",
     "\n",
     "\n",
     "\n",
-    "### Bigger picture:\n",
+    "## Hypothesis:\n",
     "\n",
     "**We hypothesise that** other-initiated repair and a compositional language co-evolve under the following assumptions:\n",
     "\n",
     "1. There is a pressure for communicative success\n",
-    "    2. Understanding part of the meaning is better than understanding none of it\n",
-    "3. There is a pressure to make repair sequences as efficient as possible (in terms of utterance length)\n",
+    "    2. <span class=\"burk\">Understanding part of the meaning is better than understanding none of it</span>\n",
+    "3. There is a pressure to make repair sequences as efficient as possible (in terms of combined utterance length of repair initiator and response)\n",
     "    4. Listeners have at least two types of repair initiator at their disposal: (i) open request, and (ii) closed request\n",
+    "--> More generally the second point is pressure for efficiency\n",
     "    \n",
-    "This hypothesis is based on the idea that if repair sequences are under a pressure to be efficient, then it becomes useful to be able to initiate repair by asking for clarification of just _part_ of the utterance, specifically by feeding back the part of the _meaning_ that you did get. Under those circumstances, a compositional system is helpful (compared to a holistic system), because parts of the signal (i.e. 'substrings') map to parts of the meaning. **Note** that this hypothesis is therefore based on the assumption that the 'closed request' type of repair initiator works only if the listener has _understood_ part of the _meaning_ of the signal, as opposed to just having received part of the _signal_ and being able to repeat that part verbatim, in order to prompt the speaker to repeat the part that didn't come through.\n",
+    "This hypothesis is based on the idea that if repair sequences are under a pressure to be efficient, then it becomes useful to be able to initiate repair by asking for clarification of just _part_ of the utterance, specifically by feeding back the part of the meaning that you _did_ get. Under those circumstances, a compositional system is helpful (compared to a holistic system), because parts of the signal (i.e. 'substrings') map to parts of the meaning. _**<span class=\"mark\">Note</span>**_ that this hypothesis is thus based on the assumption that the 'closed request' type of repair initiator works only if the listener has _understood_ part of the _meaning_ of the signal, as opposed to just having received part of the _signal_ and being able to repeat that back verbatim, in order to prompt the speaker to repeat the part that didn't come through. Does that assumption match what we know from empirical work?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2019-08-01 12:52:29 \n",
+    "\n",
+    "## Predictions:\n",
+    "\n",
+    "Here we adapt the model of Kirby et al. (2015)---where they show that a compositional language evolves when there is a pressure for both (i) learnability and (ii) expressivity---to incorporate noise (step 1) and repair (step 2).\n",
+    "\n",
+    "In Kirby et al.'s model, the pressure for expressivity (implemented as speakers aiming to avoid ambiguity when they produce a signal) is what causes populations to move towards languages that have one-to-one mappings between meanings and signals, but these can be either compositional or holistic languages. The pressure for learnability then (implemented as a prior that favours more compressible languages) is what causes populations to move towards compositional languages rather than holistic languages, because compositional languages are more compressible (and therefore, is the assumption, easier to learn). \n",
+    "\n",
+    "\n",
+    "Therefore, _**the strongest prediction**_ given our reasoning above, would be that if we take away the pressure for learnability, but add in environmental noise and the possibility of repair (combined with a pressure for efficient repair sequences), populations would also converge on a compositional language. This may be a bit of a weird prediction in itself, because I think the assumption of a pressure for learnability makes sense, but by isolating the effect of the two (learnability vs. noise+repair) we could say something about whether they might both contribute to making compositionality a good solution for the pressures that are at play in language evolution.\n",
     "\n",
     "\n",
     "\n",
-    "### Step 1: Adding noise to existing model of evolution of compositional language\n",
-    "\n",
-    "Here we adapt the model of Kirby et al. (2015)---where they show that a compositional language evolves when there is a pressure for both (i) learnability and (ii) expressivity---to incorporate noise.\n",
     "\n",
     "\n",
     "\n",
-    "\n",
-    "#### References  \n",
+    "### References  \n",
     "Kirby, S., Tamariz, M., Cornish, H., & Smith, K. (2015). Compression and communication in the cultural evolution of linguistic structure. Cognition, 141, 87–102. https://doi.org/10.1016/j.cognition.2015.03.016"
    ]
   },
@@ -40,6 +54,7 @@
    },
    "source": [
     "2019-07-31 15:27:33 \n",
+    "\n",
     "## Production in the Kirby et al. (2015) model:\n",
     "\n",
     "$$\n",
@@ -50,7 +65,11 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "where $f$ stands for form (in the sense of a complete signal, such as *aa*), $l$ stands for language, $t$ stands for topic, and $\\epsilon$ stands for production error."
+    "where $f$ stands for form (in the sense of a complete signal, such as *aa*), $l$ stands for language, $t$ stands for topic, $a$ stands for ambiguity (i.e. the number of meanings in $M$ that map to form $f$ in $l$), $\\gamma$ specifies the extent to which ambiguous utterances are penalised, and $\\epsilon$ stands for production error.\n",
+    "\n",
+    "\n",
+    "From Kirby et al. (2015, pp. 92-93):\n",
+    "> \"If $a$ = 1 ($f$ is unambiguous) and/or $\\gamma$ = 0 then this yields a model of production where the 'correct' form is produced with probability $1-\\epsilon$. However, when $\\gamma$ > 0 and $f$ is ambiguous (i.e., $a$ > 1), then the 'correct' mapping from $t$ to $f$ is less likely to be produced (the probability $P(f \\mid l, t)$ is reduced by the factor $(\\frac{1}{a})^\\gamma$ ) and the remaining probability mass is spread equally over the other possible forms, leading to increased probability of producing $f'$ $\\neq$ $f$. Therefore, $\\gamma$ > 0 introduces a penalty for languages whose utterances are ambiguous.\"\n"
    ]
   },
   {
@@ -63,13 +82,11 @@
     "## How do we add *environmental* noise to this production model?\n",
     "\n",
     "\n",
-    "If we leave Kirby et al.'s production error aside for a moment, we could add environmental noise by allowing production to have two possible outcomes. Given a particular topic *t*, a speaker could produce either:\n",
-    "- form $f$ if $t$ is mapped to $f$ in $l$, with probability $1-n$\n",
-    "- form $f'$, where $f'$ is a 'noisy variant' of $f$ *and* $t$ is mapped to $f$ in $l$. This should happen with probability $\\frac{1}{|F'|}$ (where $F'$ is the full set of possible noisy variants of the form $f$ that maps to $t$ in $l$\n",
+    "If we leave Kirby et al.'s production error $\\epsilon$ aside for a moment, we could add environmental noise by allowing production to have two possible outcomes. Given a particular topic *t*, a speaker could produce either:\n",
+    "- form $f$ if $t$ is mapped to $f$ in $l$, with probability $1-n$ (where $n$ stands for the probability of noise happening)\n",
+    "- form $f_{noisy}$, where $f_{noisy}$ is a 'noisy variant' of $f$ *and* $t$ is mapped to $f$ in $l$. This should happen with probability $\\frac{n}{|F_{noisy}|}$ (where $F_{noisy}$ is the full set of possible noisy variants of the form $f$ that maps to $t$ in $l$\n",
     "\n",
-    "where $n$ stands for the probability of noise happening.\n",
-    "\n",
-    "To give an example, using the example compositional grammar of Kirby et al. (2015):\n",
+    "To give an example, using the example compositional grammar from Kirby et al. (2015, p. 92):\n",
     "\n",
     "S   --> A B   \n",
     "A:0 --> a   \n",
@@ -78,21 +95,45 @@
     "B:3 --> b   \n",
     "\n",
     "Given this grammar, the only form that maps to topic 02 is *aa*.   \n",
-    "__**Design decision:**__ If we allow for both 'partial' and 'full' noise,   \n",
+    "_**<span class=\"mark\"><span class=\"mark\">Design decision:</span></span>**_ If we allow for both 'partial' and 'full' noise,   \n",
     " this form has three possible noisy variants:\n",
     "- a_\n",
     "- _a\n",
     "- \\__\n",
     "\n",
-    "where _ stands for a noisy part of the signal that the listener could not perceive.\n",
+    "where _ stands for a noisy part of the signal that the listener could not perceive."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "_**<span class=\"girk\">Decision**_ Mark D. + Marieke (01/08/2019):</span> It is interesting to allow for both open requests and closed requests in this model, because the intuition that our hypothesis is based on, is that whereas a compositional system allows for the usage of both open and closed requests, a holistic system only allows for open requests. \n",
+    "\n",
     "\n",
     "So if 02 is the speaker's intended topic (and if we exclude the possibility of the speaker making a production error for now), they will produce the following signals with the following probabilities:\n",
     "- aa with probability $1-n$\n",
-    "- [a_, _a, \\__ \\] with probability $\\frac{n}{3}$ (because there are 3 possible noisy variants\n",
-    "\n",
-    "\n",
-    "__**Design decision:**__ should noisy variant \\__ be less likely than other noisy variants, because it means that really *none* of the signal came through? Intuitively it would make sense if a_ was twice as likely to happen as \\__, but that would make it a bit trickier to work out the probabilities for the different noisy variants. So to keep it simple I propose making all the noisy variants equally probable.\n",
-    "\n",
+    "- [a_, \\_a, \\__ \\] with probability $\\frac{n}{3}$ (because there are 3 possible noisy variants)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "_**<span class=\"mark\">Design decision:</span>**_ should noisy variant \\__ be less likely than other noisy variants, because it means that really *none* of the signal came through? Intuitively it would make sense if a_ was twice as likely to happen as \\__, but that would make the production function yet more complicated. So to keep it simple I propose making all the noisy variants equally probable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Now let's add the probability of making a production error $\\epsilon$ back in, which gives us: \n",
     "\n",
     "\n",
     "\n",
@@ -100,9 +141,9 @@
     "P(f \\mid l, t) \\propto \\Bigg\\{\n",
     "\\begin{array}{ll}\n",
     "(\\frac{1}{a})^\\gamma \\, (1-\\epsilon) \\, (1-n) \\; \\; \\textrm{if} \\; t \\; \\textrm{is mapped to} \\; f \\; \\textrm{in} \\; l \\; \\textrm{and} \\; f \\; \\textrm{is intact} \\\\ \n",
-    "(\\frac{1}{a})^\\gamma \\, (1-\\epsilon) \\, n \\quad \\quad \\; \\; \\textrm{if part of} \\; t \\; \\textrm{is mapped to} \\; f \\; \\textrm{in} \\; l \\; \\textrm{and} \\; f \\; \\textrm{is not intact} \\\\ \n",
+    "(\\frac{1}{a})^\\gamma \\, (1-\\epsilon) \\, \\frac{n}{|F_{noisy}|} \\quad \\quad \\; \\; \\textrm{if part of} \\; t \\; \\textrm{is mapped to} \\; f \\; \\textrm{in} \\; l \\; \\textrm{and} \\; f \\; \\textrm{is not intact} \\\\ \n",
     "\\frac{\\epsilon}{|F|-1} \\, (1-n) \\quad \\quad \\quad \\textrm{if} \\; t \\; \\textrm{is not mapped to} \\; f \\; \\textrm{in} \\; l \\; \\textrm{and} \\; f \\; \\textrm{is intact}\\\\\n",
-    "\\frac{\\epsilon}{|F|-1} \\, n \\quad \\quad \\quad \\quad \\quad \\textrm{if no part of} \\; t \\; \\textrm{is mapped to} \\; f \\; \\textrm{in} \\; l \\; \\textrm{and} \\; f \\; \\textrm{is not intact}\\\\\n",
+    "\\frac{\\epsilon}{|F|-1} \\, \\frac{n}{|F_{noisy}|} \\quad \\quad \\quad \\quad \\quad \\textrm{if no part of} \\; t \\; \\textrm{is mapped to} \\; f \\; \\textrm{in} \\; l \\; \\textrm{and} \\; f \\; \\textrm{is not intact}\\\\\n",
     "\\end{array}\n",
     "$$\n",
     "\n",
@@ -114,23 +155,19 @@
    "metadata": {},
    "source": [
     "2019-07-31 15:28:14 \n",
-    "### First, let's reproduce Kirby et al.'s (2015) model of production:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
+    "### First, let's reproduce Kirby et al.'s (2015) model of production:\n",
+    "\n",
     "In order to do that we first need to set some general parameters:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-31T13:32:28.735676Z",
-     "start_time": "2019-07-31T13:32:28.733299Z"
+     "end_time": "2019-08-01T11:05:53.784718Z",
+     "start_time": "2019-08-01T11:05:53.782018Z"
     }
    },
    "outputs": [],
@@ -149,11 +186,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-31T13:32:28.776515Z",
-     "start_time": "2019-07-31T13:32:28.762336Z"
+     "end_time": "2019-08-01T11:06:00.984220Z",
+     "start_time": "2019-08-01T11:06:00.968009Z"
     }
    },
    "outputs": [
@@ -312,11 +349,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-31T13:32:28.798441Z",
-     "start_time": "2019-07-31T13:32:28.790748Z"
+     "end_time": "2019-08-01T11:06:10.288427Z",
+     "start_time": "2019-08-01T11:06:10.278439Z"
     },
     "code_folding": []
    },
@@ -399,6 +436,21 @@
     "\n",
     "production(compositional_lang, \"02\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### References  \n",
+    "Kirby, S., Tamariz, M., Cornish, H., & Smith, K. (2015). Compression and communication in the cultural evolution of linguistic structure. Cognition, 141, 87–102. https://doi.org/10.1016/j.cognition.2015.03.016"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
