Edited some of the hypothesis and predictions sections based on discussion with Mark D.

--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2019-07-31 15:27:01 \n",
+    "2019-08-06 11:19:34  \n",
     "\n",
     "# The evolution of compositionality under environmental noise\n",
     "\n",
@@ -15,19 +15,17 @@
     "**We hypothesise that** other-initiated repair and a compositional language co-evolve under the following assumptions:\n",
     "\n",
     "1. There is a pressure for communicative success\n",
-    "    2. <span class=\"burk\">Understanding part of the meaning is better than understanding none of it</span>\n",
+    "2. Listeners have at least two types of repair initiator at their disposal: (i) open request, and (ii) closed request\n",
     "3. There is a pressure to make repair sequences as efficient as possible (in terms of combined utterance length of repair initiator and response)\n",
-    "    4. Listeners have at least two types of repair initiator at their disposal: (i) open request, and (ii) closed request\n",
-    "--> More generally the second point is pressure for efficiency\n",
     "    \n",
-    "This hypothesis is based on the idea that if repair sequences are under a pressure to be efficient, then it becomes useful to be able to initiate repair by asking for clarification of just _part_ of the utterance, specifically by feeding back the part of the meaning that you _did_ get. Under those circumstances, a compositional system is helpful (compared to a holistic system), because parts of the signal (i.e. 'substrings') map to parts of the meaning. _**<span class=\"mark\">Note</span>**_ that this hypothesis is thus based on the assumption that the 'closed request' type of repair initiator works only if the listener has _understood_ part of the _meaning_ of the signal, as opposed to just having received part of the _signal_ and being able to repeat that back verbatim, in order to prompt the speaker to repeat the part that didn't come through. Does that assumption match what we know from empirical work?"
+    "This hypothesis is based on the idea that if repair sequences are under a pressure to be efficient, then it becomes useful to be able to initiate repair by asking for clarification of just _part_ of the utterance, specifically by feeding back the part of the meaning that you _did_ get. Under those circumstances, a compositional system is helpful (compared to a holistic system), because parts of the signal (i.e. 'substrings') map to parts of the meaning. _**<span class=\"mark\">Note</span>**_ that this hypothesis is thus based on the assumption that the 'closed request' type of repair initiator works only if the listener has _understood_ part of the _meaning_ of the signal, as opposed to just having received part of the _signal_ and being able to repeat that back verbatim, in order to prompt the speaker to repeat the part that didn't come through. We feel that this is a reasonable assumption based on what we know from empirical work, but it is a little hard to assess given that natural language _is_ compositional. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2019-08-01 12:52:29 \n",
+    "2019-08-06 11:19:27 \n",
     "\n",
     "## Predictions:\n",
     "\n",
@@ -35,9 +33,11 @@
     "\n",
     "In Kirby et al.'s model, the pressure for expressivity (implemented as speakers aiming to avoid ambiguity when they produce a signal) is what causes populations to move towards languages that have one-to-one mappings between meanings and signals, but these can be either compositional or holistic languages. The pressure for learnability then (implemented as a prior that favours more compressible languages) is what causes populations to move towards compositional languages rather than holistic languages, because compositional languages are more compressible (and therefore, is the assumption, easier to learn). \n",
     "\n",
+    "### Strong prediction (excluding pressure for learnability):\n",
     "\n",
     "Therefore, _**the strongest prediction**_ given our reasoning above, would be that if we take away the pressure for learnability, but add in environmental noise and the possibility of repair (combined with a pressure for efficient repair sequences), populations would also converge on a compositional language. This may be a bit of a weird prediction in itself, because I think the assumption of a pressure for learnability makes sense, but by isolating the effect of the two (learnability vs. noise+repair) we could say something about whether they might both contribute to making compositionality a good solution for the pressures that are at play in language evolution.\n",
     "\n",
+    "### More reasonable prediction (including pressure for learnability):\n",
     "\n",
     "\n",
     "\n",
