Added some thoughts on pressure for communicative success

--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -35,16 +35,29 @@
     "\n",
     "### Strong prediction (excluding pressure for learnability):\n",
     "\n",
-    "Therefore, _**the strongest prediction**_ given our reasoning above, would be that if we take away the pressure for learnability, but add in environmental noise and the possibility of repair (combined with a pressure for efficient repair sequences), populations would also converge on a compositional language. This may be a bit of a weird prediction in itself, because I think the assumption of a pressure for learnability makes sense, but by isolating the effect of the two (learnability vs. noise+repair) we could say something about whether they might both contribute to making compositionality a good solution for the pressures that are at play in language evolution.\n",
+    "Therefore, _**the strongest prediction**_ given our reasoning above, would be that if we take away the pressure for learnability, but add in environmental noise and the possibility of repair (combined with a pressure for efficient repair sequences), populations would also converge on a compositional language. This may be a bit of a weird prediction in itself, because we think the assumption of a pressure for learnability makes sense, but by isolating the effect of the two (learnability vs. noise+repair) we could say something about whether they might both contribute to making compositionality a good solution for the pressures at play in language evolution.\n",
     "\n",
     "### More reasonable prediction (including pressure for learnability):\n",
     "\n",
-    "\n",
-    "\n",
+    "Not entirely sure what to predict here. Maybe the effects of a noise+repair+pressure for efficient repair on the one hand, and a pressure for learnability on the other hand, will be additive?\n",
     "\n",
     "\n",
     "### References  \n",
     "Kirby, S., Tamariz, M., Cornish, H., & Smith, K. (2015). Compression and communication in the cultural evolution of linguistic structure. Cognition, 141, 87–102. https://doi.org/10.1016/j.cognition.2015.03.016"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question: How to implement the pressure for communicative success that we have in mind?\n",
+    "\n",
+    "What I'm wondering here is whether the pressure for expressivity, as it was implemented by Kirby et al. (2015), in combination with a pressure for efficiency, will have the effect of a pressure for communicative success as we have in mind, or whether a separate pressure for communicative success will need to be added.\n",
+    "\n",
+    "Firstly, the way the pressure for expressivity is implemented by Kirby et al. (2015):\n",
+    "speakers try to avoid using ambiguous signals. ---> this is sufficient for pushing populations towards having either holistic or compositional languages (as opposed to degenerate languages). \n",
+    "\n",
+    "---> What could the effect of environmental noise be in this? If data consists of <meaning, form> pairs that were produced by a speaker-hearer pair, as in the Kirby et al. (2015) model, noise _without_ repair will mean that learners sometimes receive incomplete data (and incomplete form). I expect that that will make it more likely for learners to infer a language that is different from the language that the speaker used. \n"
    ]
   },
   {
