fixed bug in code for creating all languages, and added code to classify all languages

--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -57,7 +57,11 @@
     "Firstly, the way the pressure for expressivity is implemented by Kirby et al. (2015):\n",
     "speakers try to avoid using ambiguous signals. ---> this is sufficient for pushing populations towards having either holistic or compositional languages (as opposed to degenerate languages). \n",
     "\n",
-    "---> What could the effect of environmental noise be in this? If data consists of <meaning, form> pairs that were produced by a speaker-hearer pair, as in the Kirby et al. (2015) model, noise _without_ repair will mean that learners sometimes receive incomplete data (and incomplete form). I expect that that will make it more likely for learners to infer a language that is different from the language that the speaker used. \n"
+    "---> What could the effect of environmental noise be in this? If data consists of <meaning, form> pairs that were produced by a pair of agents from the previous generation, as in the Kirby et al. (2015) model, noise _without_ repair will mean that learners sometimes receive incomplete data (an incomplete form). ---> And what about the meaning? Could the meaning also be incomplete, in a case where the agents are using a compositional language? \n",
+    "\n",
+    "---> What will that mean for how likely learners are to infer different languages? In general, they will probably be more likely to transition from one language into another, because data with blank spots in it will make the data more compatible with more different languages. Will it push learners in any particular direction though? I can't think why that would happen if learners have a flat prior. However, if learners have a compression-based prior as in the Kirby et al. (2015) model, they would be pushed towards degenerate languages in general, and I'd expect this effect to be exaggerated by environmental noise.\n",
+    "\n",
+    "---> The pressure for communicative success that we had in mind is that speaker and hearer try to cooperate so that the speaker can get their intended meaning across. I think this pressure is captured if we assume that the hearer will initiate repair when they can't derive a full meaning based on the form they received. In some cases, that means a hearer will not have to initiate repair even when they received an incomplete form. That is, if the hearer is using a language of the 'other' type, in which there is only one form that starts with a 'b', and that form maps to one particular meaning, then they will be able to infer a full meaning, and will therefore not initiate repair. However, such a language will necessarily also contain some degenerate forms, such as 'aa' mapping to both meaning '02' and meaning '03'. _That_ is where the pressure for expressivity comes in: speakers will try to avoid using such ambiguous forms, and therefore learners will be more likely to infer either a holistic or compositional language when receiving data from such a language of the 'other' type.\n"
    ]
   },
   {
@@ -176,11 +180,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-01T11:05:53.784718Z",
-     "start_time": "2019-08-01T11:05:53.782018Z"
+     "end_time": "2019-08-12T09:15:37.061635Z",
+     "start_time": "2019-08-12T09:15:37.059115Z"
     }
    },
    "outputs": [],
@@ -199,48 +203,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-01T11:06:00.984220Z",
-     "start_time": "2019-08-01T11:06:00.968009Z"
+     "end_time": "2019-08-12T09:39:50.038268Z",
+     "start_time": "2019-08-12T09:39:50.010996Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "all_possible_languages are:\n",
-      "[('aa', 'aa', 'aa', 'aa'), ('aa', 'aa', 'aa', 'ab'), ('aa', 'aa', 'aa', 'ba'), ('aa', 'aa', 'aa', 'bb'), ('aa', 'aa', 'ab', 'ab'), ('aa', 'aa', 'ab', 'ba'), ('aa', 'aa', 'ab', 'bb'), ('aa', 'aa', 'ba', 'ba'), ('aa', 'aa', 'ba', 'bb'), ('aa', 'aa', 'bb', 'bb'), ('aa', 'ab', 'ab', 'ab'), ('aa', 'ab', 'ab', 'ba'), ('aa', 'ab', 'ab', 'bb'), ('aa', 'ab', 'ba', 'ba'), ('aa', 'ab', 'ba', 'bb'), ('aa', 'ab', 'bb', 'bb'), ('aa', 'ba', 'ba', 'ba'), ('aa', 'ba', 'ba', 'bb'), ('aa', 'ba', 'bb', 'bb'), ('aa', 'bb', 'bb', 'bb'), ('ab', 'ab', 'ab', 'ab'), ('ab', 'ab', 'ab', 'ba'), ('ab', 'ab', 'ab', 'bb'), ('ab', 'ab', 'ba', 'ba'), ('ab', 'ab', 'ba', 'bb'), ('ab', 'ab', 'bb', 'bb'), ('ab', 'ba', 'ba', 'ba'), ('ab', 'ba', 'ba', 'bb'), ('ab', 'ba', 'bb', 'bb'), ('ab', 'bb', 'bb', 'bb'), ('ba', 'ba', 'ba', 'ba'), ('ba', 'ba', 'ba', 'bb'), ('ba', 'ba', 'bb', 'bb'), ('ba', 'bb', 'bb', 'bb'), ('bb', 'bb', 'bb', 'bb')]\n",
-      "number of possible languages is:\n",
-      "35\n",
-      "\n",
-      "degenerate_lang is:\n",
-      "('aa', 'aa', 'aa', 'aa')\n",
-      "class_degenerate_lang is:\n",
-      "degenerate\n",
-      "\n",
-      "compositional_lang is:\n",
-      "('aa', 'ab', 'ba', 'bb')\n",
-      "class_compositional_lang is:\n",
-      "compositional\n",
-      "\n",
-      "holistic_lang is:\n",
-      "('aa', 'ab', 'bb', 'ba')\n",
-      "class_holistic_lang is:\n",
-      "holistic\n",
-      "\n",
-      "other_lang is:\n",
-      "('aa', 'aa', 'aa', 'ab')\n",
-      "class_other_lang is:\n",
-      "other\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-b1abd58c6c3f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mitertools\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcreate_all_possible_languages\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmeanings\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mforms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \"\"\"Creates all possible languages\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
      ]
     }
    ],
    "source": [
     "import itertools\n",
-    "\n",
+    "import numpy as np\n",
     "\n",
     "def create_all_possible_languages(meanings, forms):\n",
     "    \"\"\"Creates all possible languages\n",
@@ -253,22 +238,29 @@
     "    :rtype: list\n",
     "    \"\"\"\n",
     "    all_possible_languages = list(\n",
-    "        itertools.combinations_with_replacement(forms, len(meanings)))\n",
+    "        itertools.product(forms, repeat=len(meanings)))\n",
     "    return all_possible_languages\n",
     "\n",
     "\n",
     "def classify_language(lang, forms, meanings):\n",
     "    \"\"\"\n",
-    "    Classify a given language as either 'compositional', 'holistic', 'degenerate' or 'other' (Kirby et al., 2015)\n",
-    "\n",
+    "    Classify one particular language as either 'degenerate' (0), 'holistic' (1), 'other' (2)\n",
+    "    or 'compositional' (3) (Kirby et al., 2015)\n",
+    "    \n",
     "    :param lang: a language; represented as a tuple of forms, where each form index maps to same index in meanings\n",
     "    :type lang: tuple\n",
     "    :param forms: list of strings corresponding to all possible forms\n",
     "    :type forms: list\n",
-    "    :returns: the category that the language falls into\n",
-    "    :rtype: str\n",
+    "    :returns: integer corresponding to category that language belongs to: \n",
+    "    0 = degenerate, 1 = holistic, 2 = other, 3 = compositional (here I'm following the \n",
+    "    numbering used in SimLang lab 21)\n",
+    "    :rtype: int\n",
     "    \"\"\"\n",
     "    # TODO: See if I can modify this function so that it can deal with any number of forms and meanings.\n",
+    "    class_degenerate = 0\n",
+    "    class_holistic = 1\n",
+    "    class_other = 2\n",
+    "    class_compositional = 3\n",
     "    # First check whether some conditions are met, bc this function hasn't been coded up in the most general way yet:\n",
     "    if len(forms) != 4:\n",
     "        raise ValueError(\n",
@@ -282,21 +274,21 @@
     "\n",
     "    # lang is degenerate if it uses the same form for every meaning:\n",
     "    if lang[0] == lang[1] and lang[1] == lang[2] and lang[2] == lang[3]:\n",
-    "        return 'degenerate'\n",
+    "        return class_degenerate\n",
     "\n",
     "    # lang is compositional if it's *not* degenerate, and each form element maps to the same meaning element for each form:\n",
     "    elif lang[0][0] == lang[1][0] and lang[2][0] == lang[3][0] and lang[0][\n",
     "            1] == lang[2][1] and lang[1][1] == lang[3][1]:\n",
-    "        return 'compositional'\n",
+    "        return class_compositional\n",
     "\n",
     "    # lang is holistic if it is *not* compositional, but *does* make us of all possible forms:\n",
     "    elif forms[0] in lang and forms[1] in lang and forms[2] in lang and forms[\n",
     "            3] in lang:\n",
-    "        return 'holistic'\n",
+    "        return class_holistic\n",
     "\n",
     "    # In all other cases, a language belongs to the 'other' category:\n",
     "    else:\n",
-    "        return 'other'\n",
+    "        return class_other\n",
     "\n",
     "\n",
     "# Let's try out our create_all_possible_languages() function:\n",
@@ -338,7 +330,49 @@
     "print(other_lang)\n",
     "class_other_lang = classify_language(other_lang, forms, meanings)\n",
     "print(\"class_other_lang is:\")\n",
-    "print(class_other_lang)"
+    "print(class_other_lang)\n",
+    "\n",
+    "\n",
+    "def classify_all_languages(language_list):\n",
+    "    \"\"\" \n",
+    "    Classify all languages as either 'degenerate' (0), 'holistic' (1), 'other' (2)\n",
+    "    or 'compositional' (3) (Kirby et al., 2015)\n",
+    "\n",
+    "    :param language_list: list of all languages\n",
+    "    :type language_list: list\n",
+    "    :returns: 1D numpy array containing integer corresponding to category of corresponding\n",
+    "    language index: 0 = degenerate, 1 = holistic, 2 = other, 3 = compositional \n",
+    "    (here I'm following the numbering used in SimLang lab 21)\n",
+    "    :rtype: 1D numpy array\n",
+    "    \"\"\"\n",
+    "    class_per_lang = np.zeros(len(language_list))\n",
+    "    for l in range(len(language_list)):\n",
+    "        class_per_lang[l] = classify_language(language_list[l])\n",
+    "    return class_per_lang\n",
+    "        \n",
+    "        \n",
+    "# Let's check whether the functions in this cell work correctly \n",
+    "# by comparing the number of languages of each type we get with \n",
+    "# the SimLang lab 21:\n",
+    "\n",
+    "# This is a list of types per language from the SimLang lab:\n",
+    "types = [0, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 2, 2, 1, 2, 2, 2, 2, 2, 2, 2, 2, 3, 2, 2, 2, 2, 2, 1, 2, 2, 2, 2, 2, 2, 2, 2, 1, 2, 2, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 1, 2, 2, 3, 2, 2, 2, 2, 2, 2, 0, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 1, 2, 2, 2, 2, 2, 2, 2, 2, 1, 2, 2, 2, 2, 2, 3, 2, 2, 2, 2, 2, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 1, 2, 2, 2, 2, 2, 3, 2, 2, 2, 2, 2, 1, 2, 2, 2, 2, 2, 2, 2, 2, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 0, 2, 2, 2, 2, 2, 2, 3, 2, 2, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 1, 2, 2, 1, 2, 2, 2, 2, 2, 2, 2, 2, 1, 2, 2, 2, 2, 2, 3, 2, 2, 2, 2, 2, 2, 2, 2, 1, 2, 2, 3, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 0]\n",
+    "types = np.array(types)\n",
+    "no_of_each_type = np.bincount(types)\n",
+    "print('')\n",
+    "print(\"no_of_each_type is:\")\n",
+    "print(no_of_each_type)\n",
+    "\n",
+    "\n",
+    "class_per_lang = classify_all_languages(all_possible_languages)\n",
+    "print('')\n",
+    "print('')\n",
+    "print(\"class_per_lang is:\")\n",
+    "print(class_per_lang)\n",
+    "no_of_each_class = np.bincount(class_per_lang)\n",
+    "print('')\n",
+    "print(\"no_of_each_class is:\")\n",
+    "print(no_of_each_class)"
    ]
   },
   {
